jasservis.cz/wp-content/themes/theme53985/main-style.css
/* ... */
h3 a:focus {
	text-decoration:none;
	color:#333;
}
h3 a:hover {
	text-decoration:none;
	color:#f36639;
}
h4 {
	margin-bottom:22px;
	text-transform:uppercase;
}
h4 a {
	text-decoration:none;
	color:#fff;
}
h4 a:focus {
	text-decoration:none;
	color:#fff;
}
h4 a:hover {
	text-decoration:none;
	color:#f36639;
}
h5 { text-transform:uppercase; }
h5 a {
	text-decoration:none;
	color:#f36639;
}
h5 a:focus {
	text-decoration:none;
	color:#f36639;
}
h5 a:hover {
	text-decoration:none;
	color:#333;
}
p {
	margin:0 0 19px 0;
	font-weight:300;
}
a {
	-webkit-transition:0.8s;
	-moz-transition:0.8s;
	-o-transition:0.8s;
	transition:0.8s;
}
a:hover {
	-webkit-transition:0.4s;
	-moz-transition:0.4s;
	-o-transition:0.4s;
	transition:0.4s;
	text-decoration:none;
}
@media (max-width: 767px) {
	img.alignnone { width:100%; }
}
.header {
	background:none;
	margin:0;
	padding:0;
	border:none;
}
@media (max-width: 767px) {
	.header {
		padding:0 20px;
		text-align:center;
	}
}
.header .header_block_1 { padding:14px 0 8px 0; }
.header .header_block_1 .header_widget_1 {
	line-height:19px;
	font-size:12px;
	font-weight:300;
	text-transform:uppercase;
	color:#888;
}
@media (max-width: 767px) {
	.header .header_block_1 .header_widget_1 { text-align:center; }
}
.header .header_block_1 .header_widget_1 h4 {
	margin:0;
	padding:0;
	line-height:20px;
	font-size:14px;
	font-weight:300 !important;
	color:#f36639;
}
.header .header_block_1 .header_widget_1 .textwidget b {
	display:block;
	padding:1px 0 0 0;
	font-weight:300;
}
.header .header_block_1 .header_widget_1 .textwidget b:before {
	margin:0 7px 0 0;
	line-height:20px;
	font-family:FontAwesome;
	font-size:12px;
	color:#f36639;
	content:'\f041';
}
.header .header_block_1 .header_widget_2 { float:right; }
@media (max-width: 767px) {
	.header .header_block_1 .header_widget_2 {
		display:inline-block;
		float:none;
		padding:20px 0 10px 0;
		vertical-align:top;
	}
}
@media (max-width: 480px) {
	.header .header_block_1 .header_widget_2 { padding-top:10px; }
}
.header .header_block_1 .header_widget_2 h4 {
	float:left;
	margin:0;
	padding:0;
	line-height:20px;
	font-size:14px;
	font-weight:300 !important;
	color:#f36639;
}
@media (max-width: 480px) {
	.header .header_block_1 .header_widget_2 h4 {
		float:none;
		margin:0 0 4px 0;
	}
}
.header .header_block_1 .header_widget_2 .textwidget {
	float:right;
	margin:0 0 0 10px;
	line-height:20px;
	font-size:14px;
	font-weight:700;
	text-align:right;
	text-transform:uppercase;
	color:#fff;
}
@media (max-width: 480px) {
	.header .header_block_1 .header_widget_2 .textwidget {
		float:none;
		margin:0;
		text-align:center;
		display:flex;
		column-gap:10px;
	}
}
.header .header_block_1 .header_widget_2 .textwidget b {
	background:#f36639;
	float:right;
	margin:-7px 0 0 17px;
	padding:7.5px 9px 7.5px 9px;
	border:none;
	-webkit-border-radius:4px;
	-moz-border-radius:4px;
	border-radius:4px;
}
@media (max-width: 480px) {
	.header .header_block_1 .header_widget_2 .textwidget b {
		display:inline-block;
		float:none;
		margin:-3px 0 0 9px;
		padding:3px 6px 3px 6px;
		vertical-align:top;
	}
}
.header .header_block_2 {
	background:#222222;
	position:relative;
}
@media (max-width: 767px) {
	.header .header_block_2 { padding:20px 0; }
}
.header .header_block_2.isStuck { z-index:999; }
.header .header_block_2:before {
	background:#222222;
	display:block;
	position:absolute;
	top:0;
	bottom:0;
	left:-10000px;
	width:10000px;
	z-index:-1;
	content:'';
}
.header .header_block_2:after {
	background:#222222;
	display:block;
	position:absolute;
	top:0;
	bottom:0;
	right:-10000px;
	width:10000px;
	z-index:-1;
	content:'';
}
.header .logo { margin:16px 0 14px 0; }
.header .logo .logo_h__img img { max-height:60px; width:auto; }
@media (min-width: 1200px) {
	.header .logo { margin-left:1px; }
}
@media (min-width: 768px) and (max-width: 979px) {
	.header .logo { width:auto; }
}
@media (max-width: 767px) {
	.header .logo {
		display:inline-block;
		float:none;
		margin:0 0 20px 0;
		vertical-align:top;
	}
}
.header .logo .logo_h__txt { text-transform:uppercase; }
.header .logo .logo_h__txt a {
	font-weight:300;
	text-decoration:none;
}
.header .logo .logo_h__txt a:focus {
	text-decoration:none;
	color:#fff;
}
.header .logo .logo_h__txt a:hover {
	text-decoration:none;
	color:#fff;
}
.header .logo .logo_tagline { display:none; }
.header .nav__primary {
	margin:0;
	padding:0;
}
.header .nav__primary .sf-menu { border-left:1px solid #444; }
.header .nav__primary .sf-menu ul {
	background:#333;
	width:140px;
	padding:24px 20px 27px 20px;
	-webkit-box-shadow:0 0 5px rgba(0,0,0,0.3);
	-moz-box-shadow:0 0 5px rgba(0,0,0,0.3);
	box-shadow:0 0 5px rgba(0,0,0,0.3);
	text-align:left;
}
.header .nav__primary .sf-menu > li {
	background:none;
	border-right:1px solid #444;
}
.header .nav__primary .sf-menu > li > a {
	position:relative;
	padding:25px 28px 25px 28px;
	border:none;
	text-transform:uppercase;
	text-decoration:none;
}
@media (min-width: 768px) and (max-width: 979px) {
	.header .nav__primary .sf-menu > li > a {
		padding-right:15px;
		padding-left:15px;
	}
}
.header .nav__primary .sf-menu > li > a:before {
	background:#f36639;
	display:block;
	position:absolute;
	top:100%;
	right:0;
	bottom:0;
	left:0;
	-webkit-transition:0.8s;
	-moz-transition:0.8s;
	-o-transition:0.8s;
	transition:0.8s;
	z-index:-1;
	content:'';
}
.header .nav__primary .sf-menu > li li {
	background:none;
	margin:14px 0 0 0;
}
.header .nav__primary .sf-menu > li li:first-child { margin:0; }
.header .nav__primary .sf-menu > li li a {
	padding:0 0 0 0;
	border:none;
	line-height:18px;
	font-size:12px;
	font-weight:300;
	text-transform:uppercase;
	text-decoration:none;
	color:#fff;
}
.header .nav__primary .sf-menu > li li .sf-sub-indicator {
	top:50%;
	right:-12px;
	margin:-5px 0 0 0;
}
.header .nav__primary ul.sf-menu li li:hover ul, .header .nav__primary ul.sf-menu li li.sfHover ul {
	top:-24px;
	left:165px;
}
/* ... */

